<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:divider="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/barrasup"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            style="@style/noBackGround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="30sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        style="@style/noBackGround"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/pomo_description"
        android:src="@drawable/tomate" />
    
     <TextView
            android:id="@+id/minutes"
            style="@style/shadowNoBackGround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/minutes_text_view"
            android:textColor="#d2d0d0"
            android:textSize="30sp" />

    <LinearLayout
        style="@style/noBackGround"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <com.autentia.tomodoro.custom.components.CustomNumberPicker 
            android:id="@+id/minutePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/roulettebackground"
            android:divider="#000000"
            android:layout_marginRight="5sp" />
        
        <com.autentia.tomodoro.custom.components.CustomNumberPicker 
            android:id="@+id/minutePicker2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/roulettebackground"
             />

    </LinearLayout>

    <Button
        android:id="@+id/startButton"
        style="@style/shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/radiusbuttongreen"
        android:paddingBottom="8dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/start_button"
        android:textColor="#1c6c03"
        android:textSize="40sp" />

</LinearLayout>